--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -29,7 +29,7 @@
     <p>
     No special measures necessary, follow the standard installation process – extract the /xforms folder into the
     ../modules directory. Install the module through Admin -> System Module -> Modules. <br/><br/>
-    Detailed instructions on installing modules are available in the <a href="http://goo.gl/adT2i">XOOPS Operations
+    Detailed instructions on installing modules are available in the <a href="https://www.gitbook.com/book/xoops/xoops-operations-guide/" target="_blank">XOOPS Operations
     Manual</a> </p>
 
     <p class="even">
@@ -39,7 +39,7 @@
     ii) Add desired elements to the form and save it.<br/><br/>
     iii) Check that you have given your user groups the necessary module and block access rights to use this module.
     Group permissions are set through the Administration Menu -> System -> Groups. <br/><br/>Detailed instructions on
-    configuring the access rights for user groups are available in the <a href="http://goo.gl/adT2i">XOOPS Operations
+    configuring the access rights for user groups are available in the <a href="https://www.gitbook.com/book/xoops/xoops-operations-guide/" target="_blank">XOOPS Operations
     Manual</a>
     </p>
     <h4 class="odd">Tutorial</h4>
